--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '158c167-47d9-4f20-bda6-c1bba63f5039',
+        'client_id': 'd158c167-47d9-4f20-bda6-c1bba63f5039',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
